<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.maddapp.fddeveloper.fumetteriasafara.main.HomeFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:src="@drawable/logo_safara"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonPuntiMadda"
        android:contentDescription="@string/safara_logo_description"
        />

    <Button
        android:id="@+id/buttonPuntiMadda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/punti_madda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonPuntiTorneo"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        />

    <Button
        android:id="@+id/buttonPuntiTorneo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/punti_torneo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        />

</android.support.constraint.ConstraintLayout>
