<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.maddapp.fddeveloper.fumetteriasafara.tournament.GameSelectionFragment"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/magicButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:scaleType="fitCenter"
        android:src="@drawable/magic"
        android:background="#FFFFFF"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/Magic_Logo"
        />

    <ImageButton
        android:id="@+id/fowButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:scaleType="fitCenter"
        android:src="@drawable/fow"
        android:background="#FFFFFF"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/magicButton"
        app:layout_constraintBottom_toTopOf="@id/yugiohButton"
        android:contentDescription="@string/FOW_Logo"
        />

    <ImageButton
        android:id="@+id/yugiohButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:scaleType="fitCenter"
        android:src="@drawable/yugioh"
        android:background="#FFFFFF"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fowButton"
        app:layout_constraintBottom_toTopOf="@id/pokemonButton"
        android:contentDescription="@string/Yugi_Logo"
        />

    <ImageButton
        android:id="@+id/pokemonButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:scaleType="fitCenter"
        android:src="@drawable/pokemon"
        android:background="#FFFFFF"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/Pokemon_Logo"
        />

</LinearLayout>
